# software-challenge-client-2024-2025

./: LICENSE  README.md  push.bat  push.sh
python/hot-n-spicy-tuff-golem/: board.py  compute.py  field.py  main.py  network.py  player.py  state.py  test_compute.py
python/simple-client-marek/: connect.py
python/simpleclient1/: .gitignore  board.py  compute.py  field.py  main.py  move.py  parse_xml.py  player.py  state.py  test_compute.py
python/test/: memento0.xml  memento1.xml  (+8 more)
rust/simple-client-nils/: .gitignore  Cargo.toml
rust/simple-client-nils/examples/: example.rs  last_move.rs
rust/simple-client-nils/src/: computer_player.rs  error.rs  lib.rs  prelude.rs
rust/simple-client-nils/src/connection_handler/: connection_handler.rs  get.rs  join.rs  mod.rs  play.rs  read.rs
rust/simple-client-nils/src/connection_handler/parsers/: message_parser.rs  mod.rs  parse_board.rs  parse_data.rs  parse_last_move.rs  parse_memento.rs  parse_move_request.rs
rust/simple-client-nils/src/game/: board.rs  cards.rs  field_type.rs  game_error.rs  game_state.rs  hare.rs  legal_moves.rs  mod.rs  moves.rs  team.rs  update_game_state.rs  update_game_state_checked.rs
rust/simple-client-nils/src/game/legal_moves/: is_legal.rs  legal_advance_moves.rs
rust/simple-client-nils/src/game/update_game_state/: handle_cards.rs  handle_moves.rs  position_reward.rs
rust/simple-client-nils/src/utils/: competition_system_parameters.rs  find_last_none_zero_index.rs  get_attribute.rs  mod.rs  string_to_field_type.rs  triangular_numbers.rs
test-server/: config.yaml  run_tests.py
(+58 files in other folders)
